Update INC Folder

--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -1,18 +1,18 @@
 [settings]
-settings	= "Settings"
-title 		= "Title"
-site_address= "Site root URL"
-buttons 	= "Buttons"
+settings		= "Settings"
+title 			= "Title"
+site_address	= "Site root URL"
+buttons 		= "Buttons"
 fb 			= "Facebook"
 facebook_appid 	= "Facebook Application ID"
-fbappid 	= "AppID"
-plusone 	= "Google +1"
-register 	= "Register"
+fbappid 		= "AppID"
+plusone 		= "Google +1"
+register 		= "Register"
 noregister 	= "Block Registration"
 forcehttps 	= "Force https for login and registration"
 comment		= "Comments"
 nocomment	= "Remove Comments Panel"
-download	= "Downloads"
+download		= "Downloads"
 nodownload 	= "Remove downloading links"
 numcomments	= "Number of comments in Admin Stats"
 numcomm 	= "Comments"
@@ -21,6 +21,7 @@ images 		= "Images"
 language		= "Language"
 submit		= "Submit"
 generate 	= "Generate recursively thumbs and web images"
+cleanthumbs	= "Delete Thumbnails"
 folder		= "Folder"
 all			= "All"
 gener		= "Generate"
@@ -28,53 +29,59 @@ video_comment	= "PhotoShow only displays videos in WebM. You can set the encodin
 encode_video	= "Encode Video Activate"
 ffmpeg_path	= "FFmpeg path"
 ffmpeg_option	= "Encoding option"
+reverse_menu	= " Reverse order by menu"
+hide_menu	= "Hidden Menu bar"
+thumbs_fixed_width	="Fixed thumb width"
+delete_thumb	= "Delete thumbs"
 
 [account]
 createaccount	= "Create Account"
-account 	= "Account"
+account 		= "Account"
 editing		= "Editing account : "
 name		= "Name"
 email		= "Email"
-password	= "Password"
-oldpass		= "Old Pass"
+password		= "New Password"
+oldpass		= "Password"
 submit 		= "Save"
 or 			= "or"
 cancel		= "Cancel"
+language		= "Language"
+key			= "Identity Key"
 
 [delete]
 delete		= "Delete"
-path		= "Path"
+path			= "Path"
 submit 		= "Delete"
 
 [adminmenu]
 about 		= "About"
 stats 		= "View Statistics"
 tokens 		= "View Guest Tokens"
-settings 	= "Edit Settings"
-groups  	= "Edit Groups"
-account 	= "Edit Accounts"
+settings 		= "Edit Settings"
+groups  		= "Edit Groups"
+account 		= "Edit Accounts"
 back 		= "Back to Website"
 
 [jsaccounts]
-accounts 	= "Accounts"
+accounts 		= "Accounts"
 groups 		= "Groups"
 groupname 	= "Name"
 addgroup 	= "Create Group"
 
 [login]
-logintitle 	= "Login"
+logintitle 		= "Login"
 login 		= "Login"
 pass 		= "Password"
 or 			= "or"
-register 	= "Register"
+register 		= "Register"
 back 		= "Back to Website"
 
 [register]
-mainacc 	= "Please create the main account"
-register 	= "Register"
-logintxt	= "Login : letters and numbers only"
+mainacc 		= "Please create the main account"
+register 		= "Register"
+logintxt		= "Login : letters and numbers only"
 passtxt		= "Password : minimum 6 characters"
-veriftxt	= "Please input password again"
+veriftxt		= "Please input password again"
 login 		= "Login"
 pass 		= "Password"
 verif 		= "Password"
@@ -83,13 +90,14 @@ or 			= "or"
 back 		= "Back to Website"
 
 [menubar]
-logged 		= "logged as"
-login 		= "LOGIN"
-register 	= "REGISTER"
-logout 		= "LOGOUT"
-admin 		= "ADMIN"
-powered 	= "Powered by"
+logged 		= "Logged as"
+login 		= "Login"
+register 		= "Register"
+logout 		= "Logout"
+admin 		= "Settings"
+powered 		= "Powered by"
 rightsset 		= "Rights setting"
+home		= "Home page"
 
 [bin]
 delete 		= "Delete"
@@ -97,20 +105,22 @@ delete 		= "Delete"
 [judge]
 public 		= "This item is public."
 gopriv 		= "Go Private"
-priv 		= "This item is private."
+priv 			= "This item is private."
 gopub 		= "Go Public"
-accounts 	= "Allowed accounts"
+accounts 		= "Allowed accounts"
 groups 		= "Allowed groups"
-set 		= "Set Rights"
+set 			= "Set Rights"
 
 [adminpanel]
-rename  	= "Rename"
+name		= "Name"
+rename  		= "Rename"
 new 		= "New Folder"
 create 		= "Create"
 upload 		= "Upload images here"
+createthumbnails		= "Remake Thumbnails"
 
 [boardheader]
-download 	= "DOWNLOAD"
+download 	= "Download"
 
 [board]
 albums 		= "Albums"
@@ -122,10 +132,10 @@ anonymous 	= "Anonymous"
 submit 		= "Post Comment"
 
 [token]
-token       = "Guest Token"
-tokens      = "Guest Tokens"
-deletetoken = "Delete"
-createtoken = "Create Guest Token"
+token       	= "Guest Token"
+tokens      	= "Guest Tokens"
+deletetoken 	= "Delete"
+createtoken 	= "Create Guest Token"
 
 [textinfo]
 title			="Album Title"
@@ -134,3 +144,6 @@ explain 		= "Description"
 edit			= "Edit"
 delete		= "Delete"
 
+[upload]
+dropzone		= "Drop Zone"
+rights_upload	= "Rights for uploaded files"
