New version - H264 encode + bugs fix

--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -4,7 +4,7 @@ title 			= "Title"
 site_address	= "Site root URL"
 buttons 		= "Buttons"
 fb 			= "Facebook"
-facebook_appid 	= "Facebook Application ID"
+facebook_appid = "Facebook Application ID"
 fbappid 		= "AppID"
 plusone 		= "Google +1"
 register 		= "Register"
@@ -20,19 +20,19 @@ sens 		= "Max number of images displayed when hovering an album"
 images 		= "Images"
 language		= "Language"
 submit		= "Submit"
-generate 	= "Generate recursively thumbs and web images"
-cleanthumbs	= "Delete Thumbnails"
+admthumbs 	= "Manage recursively thumbs and web images"
 folder		= "Folder"
 all			= "All"
 gener		= "Generate"
-video_comment	= "PhotoShow only displays videos in WebM. You can set the encoding to convert to other formats than webm"
+video_comment	= "PhotoShow only displays videos in .h264. You can set the encoding to convert to other formats than webm"
 encode_video	= "Encode Video Activate"
 ffmpeg_path	= "FFmpeg path"
 ffmpeg_option	= "Encoding option"
 reverse_menu	= " Reverse order by menu"
 hide_menu	= "Hidden Menu bar"
-thumbs_fixed_width	="Fixed thumb width"
-delete_thumb	= "Delete thumbs"
+thfixedwidth	="Fixed thumb width"
+delthumb		= "Delete thumbs"
+genthumb		= "Generate thumbnails"
 
 [account]
 createaccount	= "Create Account"
@@ -84,7 +84,7 @@ passtxt		= "Password : minimum 6 characters"
 veriftxt		= "Please input password again"
 login 		= "Login"
 pass 		= "Password"
-verif 		= "Password"
+verif 			= "Password"
 submit 		= "Create Account"
 or 			= "or"
 back 		= "Back to Website"
@@ -114,13 +114,13 @@ set 			= "Set Rights"
 [adminpanel]
 name		= "Name"
 rename  		= "Rename"
-new 		= "New Folder"
+new 			= "New Folder"
 create 		= "Create"
 upload 		= "Upload images here"
 createthumbnails		= "Remake Thumbnails"
 
 [boardheader]
-download 	= "Download"
+download 		= "Download"
 
 [board]
 albums 		= "Albums"
@@ -132,7 +132,7 @@ anonymous 	= "Anonymous"
 submit 		= "Post Comment"
 
 [token]
-token       	= "Guest Token"
+token       		= "Guest Token"
 tokens      	= "Guest Tokens"
 deletetoken 	= "Delete"
 createtoken 	= "Create Guest Token"
