Fix Json-rpc - Fix Admin menu

--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -36,6 +36,7 @@ genthumb		= "Generate thumbnails"
 
 [account]
 createaccount	= "Create Account"
+detailaccount	= "Account Detail"
 account 		= "Account"
 editing		= "Editing account : "
 name		= "Name"
@@ -61,6 +62,7 @@ settings 		= "Edit Settings"
 groups  		= "Edit Groups"
 account 		= "Edit Accounts"
 back 		= "Back to Website"
+thumbs		= "Thumbs Managment"
 
 [jsaccounts]
 accounts 		= "Accounts"
