--- a/inc/loc/francais.ini
+++ b/inc/loc/francais.ini
@@ -34,6 +34,7 @@ genthumb		= "Générer les vignettes"
 
 [account]
 createaccount	= "Créer Compte"
+detailaccount	= "Détail du compte"
 account 		= "Compte"
 editing		= "Edition du compte : "
 name		= "Nom"
@@ -60,6 +61,7 @@ settings 		= "Préférences"
 account 		= "Comptes"
 groups 		= "Groupes"
 back 		= "Retour au site"
+thumbs		= "Gestion des vignettes"
 
 [jsaccounts]
 accounts 		= "Comptes"
