Add location French/English

--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -24,7 +24,7 @@ admthumbs 	= "Manage recursively thumbs and web images"
 folder		= "Folder"
 all			= "All"
 gener		= "Generate"
-video_comment	= "PhotoShow only displays videos in .h264. You can set the encoding to convert to other formats than webm"
+video_comment= "PhotoShow only displays videos in .h264. You can set the encoding to convert to other formats than webm"
 encode_video	= "Encode Video Activate"
 ffmpeg_path	= "FFmpeg path"
 ffmpeg_option	= "Encoding option"
@@ -32,7 +32,15 @@ reverse_menu	= " Reverse order by menu"
 hide_menu	= "Hidden Menu bar"
 thfixedwidth	="Fixed thumb width"
 delthumb		= "Delete thumbs"
-genthumb		= "Generate thumbnails"
+genthumb	= "Generate thumbnails"
+icon-path		= "Icon path"
+photos_dir	= "Default path gallery"
+ps_generated	= "Default path settings"
+timezone		= "Timezone"
+extImages	= "Images extensions"
+extVideos		= "Videos extensions"
+extFiles		= "Files extensions"
+encode_type	= "Mime type for encode"
 
 [account]
 createaccount	= "Create Account"
