--- a/inc/loc/francais.ini
+++ b/inc/loc/francais.ini
@@ -21,7 +21,7 @@ admthumbs	= "Gérer les vignettes et images 800x600 (récursif)"
 folder		= "Dossier"
 all			= "Tout"
 gener		= "Générer"
-video_comment	= "PhotoShow affiche uniquement les vidéos au format .H264. Tu peux activer l'encodage pour les autres formats"
+video_comment= "PhotoShow affiche uniquement les vidéos au format .H264. Tu peux activer l'encodage pour les autres formats"
 encode_video	= "Encodage vidéo"
 ffmpeg_path	= "Chemin ffmpeg"
 ffmpeg_option	= "Option ffmpeg"
@@ -29,8 +29,15 @@ reverse_menu	= "Ordre du menu inversé"
 hide_menu	= "Cache barre de menu"
 thfixedwidth	= "Fixer la largeur des vignettes"
 delthumb		= "Effacer les vignettes"
-genthumb		= "Générer les vignettes"
-
+genthumb	= "Générer les vignettes"
+icon-path		= "Chemin icone"
+photos_dir	= "Chemin de la gallerie"
+ps_generated	= "Chemin des vignettes"
+timezone		= "Fuseau horaire"
+extImages	= "Extensions images"
+extVideos		= "Extensions vidéos"
+extFiles		= "Extensions fichiers"
+encode_type	= "Extension pour l'encodage"
 
 [account]
 createaccount	= "Créer Compte"
