Re-write Admin Settings

--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -41,6 +41,12 @@ extImages	= "Images extensions"
 extVideos		= "Videos extensions"
 extFiles		= "Files extensions"
 encode_type	= "Mime type for encode"
+upload_resize	= "Enable resize"
+upload_crop	= "Picture crop"
+upload_width	= "Width"
+upload_height	= "Height"
+upload_quality	= "Quality"
+upload_preserve_headers = "Preserve headers (exif,epic,etc.)"
 
 [account]
 createaccount	= "Create Account"
@@ -64,13 +70,13 @@ submit 		= "Delete"
 
 [adminmenu]
 about 		= "About"
-stats 		= "View Statistics"
-tokens 		= "View Guest Tokens"
-settings 		= "Edit Settings"
-groups  		= "Edit Groups"
-account 		= "Edit Accounts"
-back 		= "Back to Website"
-thumbs		= "Thumbs Managment"
+stats 		= "Statistics"
+tokens 		= "Guest Tokens"
+settings 		= "Settings"
+groups  		= "Groups"
+accounts 		= "Accounts"
+thumbs		= "Thumbs"
+uploads		= "Uploads"
 
 [jsaccounts]
 accounts 		= "Accounts"
