--- a/inc/loc/francais.ini
+++ b/inc/loc/francais.ini
@@ -38,6 +38,12 @@ extImages	= "Extensions images"
 extVideos		= "Extensions vidéos"
 extFiles		= "Extensions fichiers"
 encode_type	= "Extension pour l'encodage"
+upload_resize	= "Redimensionner les images avant l'envoi"
+upload_crop	= "Couper l'image"
+upload_width	= "Largeur"
+upload_height	= "Hauteur"
+upload_quality	= "Qualité"
+upload_preserve_headers = "Préserver les entetes (exif,epic,etc.)"
 
 [account]
 createaccount	= "Créer Compte"
@@ -62,19 +68,19 @@ submit 		= "Supprimer"
 
 [adminmenu]
 about 		= "A propos ..."
-tokens 		= "Afficher Jetons invités"
-stats 		= "Afficher statistiques"
+tokens 		= "Jetons invités"
+stats 		= "Statistiques"
 settings 		= "Préférences"
-account 		= "Comptes"
+accounts		= "Comptes"
 groups 		= "Groupes"
-back 		= "Retour au site"
-thumbs		= "Gestion des vignettes"
+thumbs		= "Vignettes"
+uploads		= "Envois"
 
 [jsaccounts]
 accounts 		= "Comptes"
 groups 		= "Groupes"
 groupname 	= "Nom"
-addgroup 		= "Créer le Groupe"
+addgroup 	= "Créer le Groupe"
 
 [login]
 logintitle 		= "Login"
@@ -93,7 +99,7 @@ passtxt 		= "Mot de passe : minimum 6 caracteres"
 veriftxt		= "Veuillez taper le mot de passe a nouveau :"
 login 		= "Login"
 pass 		= "Mot de passe"
-verif 			= "Mot de passe"
+verif 		= "Mot de passe"
 submit 		= "Créer Compte"
 or 			= "ou"
 back 		= "Retour au site"
@@ -129,7 +135,7 @@ upload 		= "Ajouter des images"
 createthumbnails		= "Regénérer les miniatures"
 
 [boardheader]
-download 		= "Télécharger"
+download 	= "Télécharger"
 
 [board]
 albums 		= "Albums"
