--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -114,6 +114,8 @@ admin 		= "Settings"
 powered 		= "Powered by"
 rightsset 		= "Rights setting"
 home		= "Home page"
+downloadorig	= "Original picture download"
+vieworig		= "View Original picture"
 
 [bin]
 delete 		= "Delete"
