--- a/inc/loc/francais.ini
+++ b/inc/loc/francais.ini
@@ -113,6 +113,8 @@ admin 		= "Préférences"
 powered 		= "Ce site utilise"
 rightsset 		= "Gestion des droits"
 home		= "Accueil"
+downloadorig	= "Télécharger original"
+vieworig		= "Visualiser original"
 
 [bin]
 delete 		= "Supprimer"
