--- a/inc/loc/default.ini
+++ b/inc/loc/default.ini
@@ -134,7 +134,7 @@ name		= "Name"
 rename  		= "Rename"
 new 			= "New Folder"
 create 		= "Create"
-upload 		= "Upload images here"
+upload 		= "Click for Upload images"
 createthumbnails		= "Remake Thumbnails"
 
 [boardheader]
